Update run-java.sh